bulma-collapsible package added for FAQ

--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -46,9 +46,16 @@
                     </a>
 
                     <div class="navbar-item has-dropdown is-hoverable" id="moreDropdown">
-                        <a class="navbar-link">More</a>
+                        <a class="navbar-link">
+                            <span class="icon"><i class="fas fa-ellipsis-v"></i></span>
+                            <span>Plus</span>
+                        </a>
                         <div class="navbar-dropdown is-hidden-touch">
-                            <a class="navbar-item">About</a>
+
+                            <a class="navbar-item" id="about">
+                                <span class="icon"><i class="fas fa-apple-alt"></i></span>
+                                <span>A propos de Plexar</span>
+                            </a>
 
                             <a class="navbar-item" id="faq">
                                 <span class="icon"><i class="fas fa-question-circle"></i></span>
@@ -59,7 +66,9 @@
                                 <span class="icon"><i class="fas fa-edit"></i></span>
                                 <span>Contact</span>
                             </a>
+
                             <hr class="navbar-divider">
+
                             <a class="navbar-item">Report an issue</a>
                         </div>
                     </div>
