faq page, collective moderation update

--- a/TFC/imports/UI/collectiveModeration.html
+++ b/TFC/imports/UI/collectiveModeration.html
@@ -2,6 +2,11 @@
 
     {{#if currentUser}}
         <h3 class="title is-3 has-text-centered">Modération collective</h3>
+        <p class="has-text-centered">
+            Participez à la modération collective pour améliorer Plexar !
+            Chaque ajout, modification ou signalement est soumis à la validation de la communauté
+            <a class="icon has-text-primary" title="En savoir plus"><i class="fas fa-info-circle"></i></a>
+        </p>
     {{else}}
         <p class="subtitle">
             <span class="register link has-text-weight-semibold">Inscrivez-vous</span>
