--- a/TFC/imports/UI/faq.html
+++ b/TFC/imports/UI/faq.html
@@ -1,24 +1,29 @@
 <template name="faq">
     <div id="accordion_first">
         <article class="message">
-            <div class="message-header">
-                <p>Question 1 <a href="#collapsible-message-accordion-1" data-action="collapse">Collapse/Expand</a></p>
-            </div>
+            <a href="#collapsible-message-accordion-1" data-action="collapse">
+                <div class="message-header">
+                    <p>Comment fonctionne la modération collective ?</p>
+                </div>
+            </a>
             <div id="collapsible-message-accordion-1" class="message-body is-collapsible" data-parent="accordion_first">
                 <div class="message-body-content">
-    				Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis
-    				placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum
-    				<a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et
-    				sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et
-    				sem eget, facilisis sodales sem.
+    				<span>Plexar fonctionne sur un système collaboratif : ainsi nous comptons sur chacun d'entre vous pour participer à la modération.
+                    En effet, pour éviter la détérioration de nos bases de données, chaque action est soumise à une validation à laquelle vous pouvez prendre part.
+                    Après avoir observé les détails du produit, vous pouvez approuver ou rejeter l'action et suite à plusieurs participations notre système appliquera la décision de la majorité des votants.
+                    </span><br>
+                    <span>Cependant lorsque nous constatons un afflux massif d'éléments en modération, il est possible que nous intervenions en appliquant instantanément une décision pour éviter que les contributeurs n'ai à subir
+                    un délai de validation trop important.</span>
                 </div>
             </div>
         </article>
 
         <article class="message">
-            <div class="message-header">
-                <p>Question 2 <a href="#collapsible-message-accordion-2" data-action="collapse">Collapse/Expand</a></p>
-            </div>
+            <a href="#collapsible-message-accordion-2" data-action="collapse">
+                <div class="message-header">
+                    <p>Question 2</p>
+                </div>
+            </a>
             <div id="collapsible-message-accordion-2" class="message-body is-collapsible" data-parent="accordion_first">
                 <div class="message-body-content">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis
@@ -31,9 +36,11 @@
         </article>
 
         <article class="message">
-            <div class="message-header">
-                <p>Question 3 <a href="#collapsible-message-accordion-3" data-action="collapse">Collapse/Expand</a></p>
-            </div>
+            <a href="#collapsible-message-accordion-3" data-action="collapse">
+                <div class="message-header">
+                    <p>Question 3</p>
+                </div>
+            </a>
             <div id="collapsible-message-accordion-3" class="message-body is-collapsible" data-parent="accordion_first">
                 <div class="message-body-content">
     				Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis
