--- a/TFC/imports/UI/moderation/moderationProductPage.html
+++ b/TFC/imports/UI/moderation/moderationProductPage.html
@@ -86,6 +86,13 @@
                         {{/each}}
                     </div>
 
+                    {{#each displayWebsite}}
+                        <a class="button" href="{{this}}" target="_blank">
+                            <span class="icon"><i class="fas fa-globe-americas"></i></span>
+                            <span>Voir le site web</span>
+                        </a>
+                    {{/each}}
+
                     <button class="button" disabled>
                         <span class="icon"><i class="fas fa-share-alt"></i></span>
                         <p>Partager</p>
