message in modals

--- a/TFC/imports/UI/modals/forgotPassword.html
+++ b/TFC/imports/UI/modals/forgotPassword.html
@@ -10,6 +10,7 @@
             </header>
 
             <section class="modal-card-body">
+                {{> Template.dynamic template=messageToDisplay}}  <!-- Display the current message (if there's one) -->
                 <p class="subtitle">
                     Vous avez oublié votre mot de passe ?
                 </p>
