--- a/TFC/imports/UI/modals/login.html
+++ b/TFC/imports/UI/modals/login.html
@@ -10,7 +10,7 @@
             </header>
 
             <section class="modal-card-body">
-
+                {{> Template.dynamic template=messageToDisplay}}  <!-- Display the current message (if there's one) -->
                 <form id="loginForm">
 
                     <div class="field has-animated-label" id="emailField">
