--- a/TFC/imports/UI/modals/report.html
+++ b/TFC/imports/UI/modals/report.html
@@ -10,6 +10,7 @@
             </header>
 
             <section class="modal-card-body">
+                {{> Template.dynamic template=messageToDisplay}}  <!-- Display the current message (if there's one) -->
                 <h5 class="title is-5">Quelle erreur voulez-vous signaler ?</h5>
                 <form id="reportForm">
 
