--- a/TFC/imports/UI/moderation/moderationBanner.html
+++ b/TFC/imports/UI/moderation/moderationBanner.html
@@ -24,7 +24,7 @@
         {{#if editModeration moderation.reason}}
             <div class="has-text-centered">
                 <p>Raison : <br> {{moderation.reasonText}}</p>
-                <button class="button seeEdit" id="{{product._id}}">Voir les modifications</button>
+                <button class="button seeEdit" id="{{moderation._id}}">Voir les modifications</button>
             </div>
         {{else}}
             <div class="has-text-centered">
