collective moderation vote counts and daily limit display

--- a/TFC/imports/UI/moderation/collectiveModeration.html
+++ b/TFC/imports/UI/moderation/collectiveModeration.html
@@ -12,6 +12,8 @@
             {{#each moderationCounter}}
                 <p class="has-text-centered">{{total}} produits sont actuellement en modération dont {{newProducts}} nouveaux ajouts, {{editedProducts}} modifications et {{reports}} signalements.</p>
             {{/each}}
+        {{else}}
+            <p>Participations quotidiennes : {{displayCurrentDailyVotes}} / {{displayCurrentDailyVotesLimit}}</p>
         {{/if}}
 
         <br>
