allow only one moderation per product at the same time

--- a/TFC/imports/UI/moderation/collectiveModeration.html
+++ b/TFC/imports/UI/moderation/collectiveModeration.html
@@ -13,7 +13,7 @@
                 <p class="has-text-centered">{{total}} produits sont actuellement en modération dont {{newProducts}} nouveaux ajouts, {{editedProducts}} modifications et {{reports}} signalements.</p>
             {{/each}}
         {{else}}
-            <p>Participations quotidiennes : {{displayCurrentDailyVotes}} / {{displayCurrentDailyVotesLimit}}</p>
+            <p class="has-text-centered">Participations quotidiennes : {{displayCurrentDailyVotes}} / {{displayCurrentDailyVotesLimit}}</p>
         {{/if}}
 
         <br>
