--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -41,7 +41,7 @@
                     </div>
 
                     <a class="navbar-item" id="collectiveModeration">
-                        <span class="icon"><i class="fas fa-poll"></i></span>
+                        <span class="icon"><i class="fas fa-tools"></i></span>
                         <span>Modération collective</span>
                     </a>
 
