contact form working

--- a/TFC/imports/UI/contact.html
+++ b/TFC/imports/UI/contact.html
@@ -9,7 +9,7 @@
 
     <br><br>
 
-    <form class="container">
+    <form class="container" id="contactForm">
         <div class="field has-animated-label" id="emailField">
             <div class="control has-icons-left">
                 <input class="input has-animated-label" type="email" name="email" id="email" placeholder=" " required>
@@ -37,4 +37,9 @@
             <span id="messageCharCounter" class="character-counter"></span>
         </div>
     </form>
+
+    <br>
+    <div class="container">
+        <button class="button is-medium is-success is-fullwidth" id="sendMessage">Envoyer le message</button>
+    </div>
 </template>
