--- a/TFC/imports/UI/messages/verifyEmail.html
+++ b/TFC/imports/UI/messages/verifyEmail.html
@@ -1,6 +1,6 @@
 <template name="verifyEmail">
     {{#if messageToDisplay}}
-        <article class="message is-warning">
+        <article class="message is-warning" style="margin-bottom: 0;">
             <div class="message-header">
                 <p>Un email de vérification a été envoyé à {{userEmail}}, veuillez consulter votre boîte mail.</p>
                 <button class="delete" aria-label="delete"></button>
