bug fixes and error display

--- a/TFC/imports/UI/addProduct.html
+++ b/TFC/imports/UI/addProduct.html
@@ -10,6 +10,9 @@
         </header>
         <form id="newProduct" class="container" style="border: ridge grey 0.1rem; padding: 0.8rem;">
 
+            <!-- Prevent form submission with enter key by adding an hidden submit button (https://stackoverflow.com/a/51507806/12171474) -->
+            <button type="submit" disabled style="display: none" aria-hidden="true"></button>
+
             <section class="section">
                 <h4 class="title is-4 has-text-centered">Informations générales</h4>
 
@@ -115,7 +118,7 @@
                     </div>
             </section>
 
-            <button class="button is-success is-medium is-fullwidth" id="addProduct" type="submit" >Ajouter le produit !</button>
+            <button class="button is-success is-medium is-fullwidth" id="addProduct" type="submit">Ajouter le produit !</button>
         </form>
     {{else}}
         <p class="subtitle">
