--- a/TFC/imports/UI/contact.html
+++ b/TFC/imports/UI/contact.html
@@ -18,6 +18,8 @@
                     <i class="fas fa-envelope"></i>
                 </span>
             </div>
+            <p class="help is-success"></p>
+            <p class="help is-danger"></p>
         </div>
 
         <div class="field has-animated-label">
