--- a/TFC/imports/UI/editProduct.html
+++ b/TFC/imports/UI/editProduct.html
@@ -10,12 +10,15 @@
     {{#if currentUser}}
         <form class="container" id="editProduct" style="border: ridge grey 0.1rem; padding: 0.8rem;">
 
+            <!-- Prevent form submission with enter key by adding an hidden submit button (https://stackoverflow.com/a/51507806/12171474) -->
+            <button type="submit" disabled style="display: none" aria-hidden="true"></button>
+
             <section class="section">
                 <h4 class="title is-4 has-text-centered">Informations générales</h4>
 
                 <div class="field has-animated-label">
                     <input type="text" class="input has-animated-label" name="name" id="name" placeholder=" " required >
-                    <label for="name" class="label is-animated">Nom du produit</label>
+                    <label for="name" class="label is-animated">Nom du produit <span class="has-text-danger">*</span></label>
                     <span id="nameCharCounter" class="character-counter"></span>
                 </div>
 
@@ -23,7 +26,7 @@
                 <div class="field has-animated-label">
                     <div class="control has-icons-left">
                         <textarea class="textarea has-animated-label" name="description" id="description" placeholder=" " required></textarea>
-                        <label for="description" class="label is-animated">Description du produit</label>
+                        <label for="description" class="label is-animated">Description du produit <span class="has-text-danger">*</span></label>
                         <span class="icon is-left">
                             <i class="fas fa-file-alt"></i>
                         </span>
@@ -37,7 +40,7 @@
 
                 <div class="columns">
                     <div class="column field has-text-centered">
-                        <span>Image de couverture</span>
+                        <span>Image de couverture <span class="has-text-danger">*</span></span>
                         <div class="file has-name is-boxed width-fit-content" style="margin: auto;">
                             <label class="file-label">
                                 <input class="file-input" type="file" name="coverImage" id="coverImage" accept="image/*">
