--- a/TFC/imports/UI/user/informations.html
+++ b/TFC/imports/UI/user/informations.html
@@ -7,6 +7,9 @@
 
         <form id="editProfileForm" class="container" style="border: ridge grey 0.1rem; padding: 0.8rem;">
 
+            <!-- Prevent form submission with enter key by adding an hidden submit button (https://stackoverflow.com/a/51507806/12171474) -->
+            <button type="submit" disabled style="display: none" aria-hidden="true"></button>
+
             <section class="section">
                 <h4 class="title is-4 has-text-centered">Général</h4>
 
