--- a/TFC/imports/UI/addProduct.html
+++ b/TFC/imports/UI/addProduct.html
@@ -31,6 +31,7 @@
                             <i class="fas fa-file-alt"></i>
                         </span>
                     </div>
+                    <p class="help">Minimum 50 charactères</p>
                     <span id="descriptionCharCounter" class="character-counter"></span>
                 </div>
             </section>
