banner display on home page

--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -1,27 +1,28 @@
 <template name="home">
+    <div style="background: #f0f0f0">
+        <section class="hero is-medium" style="background: url('test.png') no-repeat center;">
+            <div class="hero-body">
+                <div class="container has-text-centered">
+                    <p class="title">PLEXAR</p>
+                    <p class="subtitle">La plateforme participative de référencement de produits à impact social</p>
+                    <form id="searchForm">
 
-    <section class="hero is-medium" style="background: #f8f9fa">
-        <div class="hero-body">
-            <div class="container has-text-centered">
-                <p class="title">PLEXAR</p>
-                <p class="subtitle">La plateforme participative de référencement de produits à impact social</p>
-                <form id="searchForm">
+                        <div class="field has-addons" style="justify-content: center;">
+                            <div class="control" style="width: 25em; max-width: 100%;">
+                                <input type="search" class="input is-rounded" id="searchBox" placeholder="Rechercher"/>
+                            </div>
 
-                    <div class="field has-addons" style="justify-content: center;">
-                        <div class="control" style="width: 25em; max-width: 100%;">
-                            <input type="search" class="input is-rounded" id="searchBox" placeholder="Rechercher"/>
+                            <div class="control">
+                                <button type="submit" class="button is-rounded">
+                                    <i class="fas fa-search"></i>
+                                </button>
+                            </div>
                         </div>
-
-                        <div class="control">
-                            <button type="submit" class="button is-rounded">
-                                <i class="fas fa-search"></i>
-                            </button>
-                        </div>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
 
     <hr style="margin: 0;">
 
