--- a/TFC/imports/UI/faq.html
+++ b/TFC/imports/UI/faq.html
@@ -1,12 +1,14 @@
 <template name="faq">
+    <h3 class="title is-3 has-text-centered">Foire aux questions</h3>
+
     <div id="accordion_first">
         <article class="message">
-            <a href="#collapsible-message-accordion-1" data-action="collapse">
+            <a href="#collectiveModeration" data-action="collapse">
                 <div class="message-header">
                     <p>Comment fonctionne la modération collective ?</p>
                 </div>
             </a>
-            <div id="collapsible-message-accordion-1" class="message-body is-collapsible" data-parent="accordion_first">
+            <div id="collectiveModeration" class="message-body is-collapsible" data-parent="accordion_first">
                 <div class="message-body-content">
     				<span>Plexar fonctionne sur un système collaboratif : ainsi nous comptons sur chacun d'entre vous pour participer à la modération.
                     En effet, pour éviter la détérioration de nos bases de données, chaque action est soumise à une validation à laquelle vous pouvez prendre part.
