--- a/TFC/imports/UI/moderation/collectiveModeration.html
+++ b/TFC/imports/UI/moderation/collectiveModeration.html
@@ -5,7 +5,9 @@
         <p class="has-text-centered">
             Participez à la modération collective pour améliorer Plexar !
             Chaque ajout, modification ou signalement est soumis à la validation de la communauté
-            <a class="icon has-text-primary" title="En savoir plus"><i class="fas fa-info-circle"></i></a>
+            <a class="icon has-text-primary" title="En savoir plus" id="infoCollectiveModeration">
+                <i class="fas fa-info-circle"></i>
+            </a>
         </p>
 
         {{#if userIsAdmin}}
