--- a/imports/UI/body.html
+++ b/imports/UI/body.html
@@ -143,21 +143,10 @@
         <div class="columns has-text-centered" style="height: 100%">
 
             <div class="column" style="background-color: #f3f3f3;">
-                <div class="columns is-mobile">
-                    <div class="column">
-                        <ul>
-                            <li class="link width-fit-content" id="about">A propos de Plexar</li>
-                            <li class="link width-fit-content" id="credits">Crédits</li>
-                        </ul>
-                    </div>
-
-                    <div class="column">
-                        <ul>
-                            <li class="link width-fit-content" id="contact">Nous contacter</li>
-                            <li class="link width-fit-content" id="faq">Foire aux questions</li>
-                        </ul>
-                    </div>
-                </div>
+                <ul>
+                    <li class="link width-fit-content" id="about">A propos de Plexar</li>
+                    <li class="link width-fit-content" id="faq">Foire aux questions</li>
+                </ul>
             </div>
 
             <div class="column" style="background-color: #f3f3f3;">
@@ -170,16 +159,12 @@
                 <a class="icon is-medium" href="https://twitter.com/PlexarApp" title="Plexar sur Twitter" target="_blank">
                     <img src="twitter.svg" alt="Twitter">
                 </a>
-
-                <a class="icon is-medium" href="https://linkedin.com/company/plexarapp/" title="Plexar sur LinkedIn" target="_blank">
-                    <img src="linkedin.svg" alt="LinkedIn">
-                </a>
             </div>
 
             <div class="column" style="background-color: #f3f3f3;">
                 <ul>
-                    <li><img src="GooglePlayBadge.png" width="126px" height="39px" alt="Disponible sur Google Play"></li>
-                    <li><img src="AppStoreBadge.svg" alt="Télécharger dans l'App Store"></li>
+                    <li class="link width-fit-content" id="contact">Nous contacter</li>
+                    <li class="link width-fit-content" id="linkBestContributorsFooter">Meilleurs contributeurs</li>
                 </ul>
             </div>
 
