--- a/imports/UI/bestContributors.html
+++ b/imports/UI/bestContributors.html
@@ -1,12 +1,28 @@
 <template name="bestContributors">
     <h3 class="title is-3 has-text-centered">Meilleurs contributeurs</h3>
 
+    <h4 class="title is-4 has-text-centered">
+        <span>Votre classement :</span>
+        <span class="title has-text-primary" style="font-family: 'Changa One';">
+            <span style="font-size: 2.5rem;">{{displayUserRank}}</span>
+            {{#if firstPlace displayUserRank}}
+                <span style="font-size: 1.5rem">er</span>
+            {{else}}
+                <span style="font-size: 1.5rem">ème</span>
+            {{/if}}
+        </span>
+    </h4>
+
     {{#each displayBestContributors}}
         <div class="card has-text-centered">
             <div class="card-content">
                 <p class="title has-text-primary" style="font-family: 'Changa One';">
                     <span style="font-size: 2.5rem;">{{this.rank}}</span>
-                    <span style="font-size: 1.5rem">ème</span>
+                    {{#if firstPlace this.rank}}
+                        <span style="font-size: 1.5rem">er</span>
+                    {{else}}
+                        <span style="font-size: 1.5rem">ème</span>
+                    {{/if}}
                 </p>
 
                 <figure class="image is-96x96" style="margin: 0 auto;">
