--- a/imports/UI/user/contributions.html
+++ b/imports/UI/user/contributions.html
@@ -1,10 +1,9 @@
 <template name="contributions">
 
-    <div class="box width-fit-content" style="margin: 0 auto">
+    <div class="box width-fit-content" style="margin: 1.5rem auto;">
         <div class="field has-addons">
             <div class="control">
-                <h5 class="title is-5 has-text-centered" style="margin-bottom: 1rem;">Mes points : {{displayPoints}}</h5>
-                <h5 class="title is-5 has-text-centered">Mon niveau : {{displayUserLevel}}</h5>
+                <h5 class="title is-5 has-text-centered">Niveau {{displayUserLevel}}</h5>
             </div>
             <div class="control" id="infoPointsAndLevels" style="height: 100%; margin: auto 0 auto 0.5rem">
                 <a class="icon has-text-primary" title="En savoir plus" id="infoCollectiveModeration">
@@ -13,6 +12,17 @@
             </div>
         </div>
     </div>
+
+    {{#each displayLevelProgress}}
+        <div class="container">
+            <p class="has-text-centered" style="font-family: 'Changa One'; font-size: 1.3rem;">{{calculateProgressPercentage}}%</p>
+            <progress class="progress is-primary" value="{{this.progressValue}}" max="{{this.progressMaximum}}" style="width: 75%; margin: 0 auto;"></progress>
+            <p class="has-text-centered">
+                <span style="font-family: 'Changa One';">{{displayPointsLeftUntilNextLevel}}</span>
+                <span> points nécessaires pour atteindre le prochain niveau</span>
+            </p>
+        </div>
+    {{/each}}
 
     <table class="table is-bordered is-striped is-hoverable" style="margin: 3rem auto;">
         <thead>
