images bug fixed and Meteor.startup refactoring for heroku

--- a/imports/UI/bestContributors.html
+++ b/imports/UI/bestContributors.html
@@ -25,9 +25,7 @@
                     {{/if}}
                 </p>
 
-                <figure class="image is-96x96" style="margin: 0 auto;">
-                    <img class="is-rounded" src="{{this.profilePicture}}">
-                </figure>
+                <img class="image is-96x96" style="margin: 0 auto;" src="{{this.profilePicture}}">
 
                 <p class="title has-text-primary" style="font-family: 'Changa One';">
                     <span class="has-text-success">{{this.username}}</span>
