--- a/imports/UI/about.html
+++ b/imports/UI/about.html
@@ -33,7 +33,7 @@
             <div class="card">
                 <div class="card-content">
                     <figure class="image is-128x128" style="margin: 0 auto;">
-                        <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+                        <img class="is-rounded" src="Henri.png">
                     </figure>
                     <p class="title">Henri</p>
                     <p class="subtitle">Graphiste & Webdesigner</p>
