images refactoring started

--- a/imports/UI/addProduct.html
+++ b/imports/UI/addProduct.html
@@ -55,8 +55,8 @@
                             </label>
                         </div>
                         {{#each displayCoverImage}}
-                            <div id="{{_id}}" class="cover-image width-fit-content" style="position: relative; display: inline-block;">
-                                <img src="{{this.url}}" class="image is-128x128">
+                            <div id="{{this._id}}" class="cover-image width-fit-content" style="position: relative; display: inline-block;">
+                                <img src="{{this.link}}" alt="{{this.name}}" class="image is-128x128"/>
                                 <button class="delete" style="position: absolute; top: 0; right: 0;"></button>
                             </div>
                         {{/each}}
@@ -78,7 +78,7 @@
                         </div>
                         {{#each displayOtherImages}}
                             <div id="{{_id}}" class="other-image width-fit-content" style="position: relative; display: inline-block;">
-                                <img src="{{this.url}}" class="image is-128x128">
+                                <img src="{{this.link}}" class="image is-128x128">
                                 <button class="delete" style="position: absolute; top: 0; right: 0;"></button>
                             </div>
                         {{/each}}
