--- a/imports/UI/productPage.html
+++ b/imports/UI/productPage.html
@@ -29,7 +29,7 @@
             <div class="card-image">
                 <div class="slideshow">
                     {{#each displayProductImages}}
-                        <img src="{{this.url}}" alt="Image du produit" class="image"/>
+                        <img src="{{this}}" alt="Image du produit" class="image"/>
                     {{/each}}
                     {{#if moreThanOneImage}}
                         <!--At least 2 images, displaying next and previous image buttons-->
