font refactoring and documentation added

--- a/imports/UI/faq.html
+++ b/imports/UI/faq.html
@@ -1,14 +1,14 @@
 <template name="faq">
     <h3 class="title is-3 has-text-centered">Foire aux questions</h3>
 
-    <div id="accordion_first">
+    <div id="collapsibleAnswers">
         <article class="message">
             <a href="#collectiveModeration" data-action="collapse">
                 <div class="message-header">
                     <p>Comment fonctionne la modération collective ?</p>
                 </div>
             </a>
-            <div id="collectiveModeration" class="message-body is-collapsible" data-parent="accordion_first">
+            <div id="collectiveModeration" class="message-body is-collapsible" data-parent="collapsibleAnswers">
                 <div class="message-body-content">
     				<span>Plexar fonctionne sur un système collaboratif : ainsi nous comptons sur chacun d'entre vous pour participer à la modération.
                     En effet, pour éviter la détérioration de nos bases de données, chaque action est soumise à une validation à laquelle vous pouvez prendre part.
@@ -27,7 +27,7 @@
                     <p>À quoi servent les points et les niveaux ?</p>
                 </div>
             </a>
-            <div id="pointsAndLevels" class="message-body is-collapsible" data-parent="accordion_first">
+            <div id="pointsAndLevels" class="message-body is-collapsible" data-parent="collapsibleAnswers">
                 <div class="message-body-content">
                     <span>Plexar vous permet de rechercher des alternatives pour adopter une consommation plus responsable, mais si vous le souhaitez vous pouvez également contribuer à améliorer notre plateforme par diverses actions (ajout, modification, vote...).</span>
                     <span>Chacune de ces actions vous rapporte des points qui permettent de mesurer votre implication, notamment via la</span>
