--- a/imports/UI/home.html
+++ b/imports/UI/home.html
@@ -113,7 +113,7 @@
                         Cette participation de la part des utilisateurs permet d’alimenter notre base de données et ainsi de permettre d’agrandir la liste de produits disponibles sur le site.
                     </p>
                     <br>
-                    <p>Découvrez nos <span class="has-text-primary" style="font: 2.5rem 'Changa One';">{{productsCounter}}</span> produits à impact social !</p>
+                    <p>Découvrez nos <span class="has-text-primary is-family-code" style="font-size: 2.5rem;">{{productsCounter}}</span> produits à impact social !</p>
                 </div>
             </div>
 
