--- a/imports/UI/productBanner.html
+++ b/imports/UI/productBanner.html
@@ -3,7 +3,7 @@
         <div class="productBanner" id="{{_id}}">
             <div class="message-header">
                 <p>{{name}}</p>
-                <p style="font: 1.8rem 'Changa One';">{{score}} <i class="fas fa-heart" style="font-size: 1.5rem;"></i></p>
+                <p class="is-family-code" style="font-size: 1.8rem;">{{score}} <i class="fas fa-heart" style="font-size: 1.5rem;"></i></p>
             </div>
 
             <div class="message-body">
@@ -17,9 +17,7 @@
                     <span class="tag is-link">{{this}}</span>
                 {{/each}}
                 </div>
-
             </div>
         </div>
-
     </article>
 </template>
