--- a/imports/UI/productPage.html
+++ b/imports/UI/productPage.html
@@ -73,7 +73,7 @@
 
                     {{#if currentUser}}
                         <div class="columns width-fit-content">
-                            <div class="column has-text-primary" style="font: 40px 'Changa One'; margin: auto; padding-right: 0;">{{score}}</div>
+                            <div class="column has-text-primary is-family-code" style="font-size: 40px; margin: auto; padding-right: 0;">{{score}}</div>
 
                             <div class="column">
                                 <span class="icon productVote" id="upvote" style="font-size: 30px">
@@ -86,7 +86,7 @@
                             </div>
                         </div>
                     {{else}}
-                        <p class="has-text-primary" style="font: 2.5rem 'Changa One';">{{score}} <i class="fas fa-heart" style="font-size: 2rem;"></i></p>
+                        <p class="has-text-primary is-family-code" style="font-size: 2.5rem;">{{score}} <i class="fas fa-heart" style="font-size: 2rem;"></i></p>
                     {{/if}}
 
                     <div class="tags">
