changements sur branche

--- a/imports/UI/bestContributors.html
+++ b/imports/UI/bestContributors.html
@@ -47,7 +47,7 @@
 
                 </div>
 
-                <img class="image is-96x96" style="margin: 0 auto;" src="{{this.profilePicture}}">
+                <img src="{{this.profilePicture}}" class="image is-96x96" style="margin: 0 auto;" >
 
                 <p class="title has-text-success is-family-code">{{this.username}}</p>
 
