--- a/imports/UI/about.html
+++ b/imports/UI/about.html
@@ -10,7 +10,7 @@
                         <img class="is-rounded" src="Evan.jpg">
                     </figure>
                     <p class="title">Evan</p>
-                    <p class="subtitle">Community Manager</p>
+                    <p class="subtitle">Responsable Webmarketing</p>
                     <p class="subtitle is-italic"><span class="is-size-3">«</span> Your time is limited, so don’t waste it living someone else’s life. <span class="is-size-3">»</span></p>
                 </div>
             </div>
