scrolling bug resolved

--- a/imports/UI/home.html
+++ b/imports/UI/home.html
@@ -1,6 +1,6 @@
 <template name="home">
     <div style="background: #f0f0f0">
-        <section class="hero is-medium" style="background: url('test.png') no-repeat center;">
+        <section class="hero is-medium" style="background: url('homeBanner.png') no-repeat center;">
             <div class="hero-body">
                 <div class="container has-text-centered">
                     <p class="title">PLEXAR</p>
