--- a/imports/UI/home.html
+++ b/imports/UI/home.html
@@ -124,45 +124,13 @@
     <hr style="margin: 0;">
 
     <section>
-        <div class="columns">
-            <div class="column">
-                <div class="tile is-ancestor">
-                    <div class="tile is-parent">
-                        <article class="tile is-child notification is-info">
-                            <p class="title">Produit en vogue</p>
-                            <p class="subtitle">With an image</p>
-                            <figure class="image is-4by3">
-                                <img src="https://bulma.io/images/placeholders/640x480.png">
-                            </figure>
-                        </article>
-                    </div>
-                </div>
-            </div>
-            <div class="column">
-                <div class="tile is-ancestor">
-                    <div class="tile is-parent">
-                        <article class="tile is-child notification is-info">
-                            <p class="title">Produit en vogue</p>
-                            <p class="subtitle">With an image</p>
-                            <figure class="image is-4by3">
-                                <img src="https://bulma.io/images/placeholders/640x480.png">
-                            </figure>
-                        </article>
-                    </div>
-                </div>
-            </div>
-            <div class="column">
-                <div class="tile is-ancestor">
-                    <div class="tile is-parent">
-                        <article class="tile is-child notification is-info">
-                            <p class="title">Produit en vogue</p>
-                            <p class="subtitle">With an image</p>
-                            <figure class="image is-4by3">
-                                <img src="https://bulma.io/images/placeholders/640x480.png">
-                            </figure>
-                        </article>
-                    </div>
-                </div>
+        <div class="hero">
+            <div class="hero-body">
+                <h3 class="title is-3 has-text-centered">Les plus populaires</h3>
+
+                {{#each displayBestProducts}}
+                    {{> productBanner}}
+                {{/each}}
             </div>
         </div>
     </section>
