--- a/imports/UI/productPage.html
+++ b/imports/UI/productPage.html
@@ -69,7 +69,7 @@
             </div>
             <div class="card-content">
                 <div>
-                    <p>Description : {{description}}</p>
+                    <p>{{description}}</p>
 
                     {{#if currentUser}}
                         <div class="columns width-fit-content">
