--- a/imports/UI/home.html
+++ b/imports/UI/home.html
@@ -76,24 +76,36 @@
                 <hr style="margin: 0;">
 
                 <div class="column has-text-centered">
-                    <h4 class="title is-4">Ajouter</h4>
-                    <span><i class="fas fa-plus-circle image is-64x64" style="display: inline;"></i></span>
+                    <h4 class="title is-4" style="margin-bottom: 1rem;">Ajouter</h4>
+
+                    <figure class="image is-90x90" style="margin: 0 auto;">
+                        <img src="ajouter.png" alt="Ajouter">
+                    </figure>
+
                     <p>Chacun est libre de contribuer en ajoutant des produits et ainsi partager ses bons plans avec la communauté</p>
                 </div>
 
                 <hr style="margin: 0;">
 
                 <div class="column has-text-centered">
-                    <h4 class="title is-4">Voter</h4>
-                    <span><i class="fas fa-poll image is-64x64" style="display: inline;"></i></span>
+                    <h4 class="title is-4" style="margin-bottom: 0;">Voter</h4>
+
+                    <figure class="image is-90x90" style="margin: 0 auto;">
+                        <img src="voter.png" alt="Voter">
+                    </figure>
+
                     <p>Participez à la modération collective et votez pour vos produits favoris pour leur donner de la visibilité</p>
                 </div>
 
                 <hr style="margin: 0;">
 
-                <div class="column has-text-centered" style="margin-bottom: 3rem;">
-                    <h4 class="title is-4">Rechercher</h4>
-                    <span><i class="fas fa-search image is-64x64" style="display: inline;"></i></span>
+                <div class="column has-text-centered" style="margin-bottom: 2.5rem;">
+                    <h4 class="title is-4" style="margin-bottom: 0.5rem;">Rechercher</h4>
+
+                    <figure class="image is-90x90" style="margin: 0 auto;">
+                        <img src="rechercher.png" alt="Rechercher">
+                    </figure>
+
                     <p>Trouvez des alternatives pour consommer en ayant un impact positif sur la société</p>
                 </div>
 
