images not displayed bug correction, small design improvements

--- a/imports/UI/about.html
+++ b/imports/UI/about.html
@@ -2,12 +2,12 @@
     <br>
     <h2 class="title is-3 has-text-centered">Notre équipe</h2>
     <br>
-    <div class="columns">
-        <div class="column has-text-centered">
+    <div class="columns has-text-centered">
+        <div class="column">
             <div class="card">
                 <div class="card-content">
                     <figure class="image is-128x128" style="margin: 0 auto;">
-                        <img class="is-rounded" src="Evan.jpg">
+                        <img class="is-rounded" src="Evan.jpeg">
                     </figure>
                     <p class="title">Evan</p>
                     <p class="subtitle">Responsable Webmarketing</p>
@@ -16,7 +16,7 @@
             </div>
         </div>
 
-        <div class="column has-text-centered">
+        <div class="column">
             <div class="card">
                 <div class="card-content">
                     <figure class="image is-128x128" style="margin: 0 auto;">
@@ -29,7 +29,7 @@
             </div>
         </div>
 
-        <div class="column has-text-centered">
+        <div class="column">
             <div class="card">
                 <div class="card-content">
                     <figure class="image is-128x128" style="margin: 0 auto;">
