--- a/imports/UI/moderation/moderationProductPage.html
+++ b/imports/UI/moderation/moderationProductPage.html
@@ -20,7 +20,7 @@
             <div class="card-image">
                 <div class="slideshow">
                     {{#each displayProductImages}}
-                        <img src="{{this.url}}" alt="Image du produit" class="image"/>
+                        <img src="{{this.link}}" alt="Image du produit - {{this.name}}" class="image"/>
                     {{/each}}
                     {{#if moreThanOneImage}}
                         <!--At least 2 images, displaying next and previous image buttons-->
